# henn_modelquery_pkg

./: Core.py  LICENSE  ModelCalc.py  ModelCats.py  ModelQuery.py  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
serializers/: APS.py
src/henn_modelquery_pkg/: model_query.py
tests/: stringtest.py  test.py  test_analyse.py  test_analyse_label.py  test_aps_analyse.py  test_aps_serializer.py  test_calc.py  test_cats.py  test_filter_label.py  test_object_tree.py  test_pandas.py  test_rule.py  test_rulebook.py  test_rulebook_example.py  test_rulebook_example_2.py  test_rulebook_example_3.py  test_ruleset.py
