[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your project name"
version = "0.0.1"
authors = [
  { name="autor name", email="author.email@henn.com" },
]
description = "A once sentece description of the package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/henn-dt/{package url}"
"Bug Tracker" = "https://github.com/henn-dt/{package url}/issues"