[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model query"
version = "0.0.1"
dependencies = ["pandas"]
authors = [
  { name="emiliano lupo", email="emiliano.lupo@henn.com" },
]
description = "A library for common queries for BIM models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/henn-dt/henn_modelquery_pkg"
"Bug Tracker" = "https://github.com/henn-dt/henn_modelquery_pkg/issues"